WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94930
[EFL] Fix compile warning
https://bugs.webkit.org/show_bug.cgi?id=94930
Summary
[EFL] Fix compile warning
Kangil Han
Reported
2012-08-24 06:17:18 PDT
Fixed compile warning 'NULL used in arithmetic [-Wpointer-arith]'.
Attachments
patch
(1.91 KB, patch)
2012-08-24 06:19 PDT
,
Kangil Han
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kangil Han
Comment 1
2012-08-24 06:19:59 PDT
Created
attachment 160410
[details]
patch
Mikhail Pozdnyakov
Comment 2
2012-08-24 06:34:55 PDT
LGTM
WebKit Review Bot
Comment 3
2012-08-24 06:46:16 PDT
Comment on
attachment 160410
[details]
patch Clearing flags on attachment: 160410 Committed
r126581
: <
http://trac.webkit.org/changeset/126581
>
WebKit Review Bot
Comment 4
2012-08-24 06:46:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug