[EFL] Fix compile warning https://bugs.webkit.org/show_bug.cgi?id=94930

Patch by Kangil Han <kangil.han@samsung.com> on 2012-08-24
Reviewed by Kenneth Rohde Christiansen.

Fixed compile warning.

* UIProcess/API/efl/ewk_back_forward_list.cpp:
(ewk_back_forward_list_n_back_items_copy): NULL used in arithmetic [-Wpointer-arith]
(ewk_back_forward_list_n_forward_items_copy): NULL used in arithmetic [-Wpointer-arith]

Canonical link: https://commits.webkit.org/112795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126581 268f45cc-cd09-0410-ab3c-d52691b4dbfc